; ModuleID = '/home/carl/AnghaBench/radare2/libr/main/extr_rabin2.c___lib_bin_xtr_cb.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/main/extr_rabin2.c___lib_bin_xtr_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r_bin_xtr_plugin_t = type { i32 }

@bin = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @__lib_bin_xtr_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__lib_bin_xtr_cb(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.r_bin_xtr_plugin_t*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.r_bin_xtr_plugin_t*
  store %struct.r_bin_xtr_plugin_t* %9, %struct.r_bin_xtr_plugin_t** %7, align 8
  %10 = load i32, i32* @bin, align 4
  %11 = load %struct.r_bin_xtr_plugin_t*, %struct.r_bin_xtr_plugin_t** %7, align 8
  %12 = call i32 @r_bin_xtr_add(i32 %10, %struct.r_bin_xtr_plugin_t* %11)
  ret i32 1
}

declare dso_local i32 @r_bin_xtr_add(i32, %struct.r_bin_xtr_plugin_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
